--- a/Testing/DbQueryMultipleServers/DbQueryMultipleServers.csproj
+++ b/Testing/DbQueryMultipleServers/DbQueryMultipleServers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8F0E46D8-667D-424F-AE30-0313124B5E0A}</ProjectGuid>
+    <ProjectGuid>{11AA33E0-5F2D-4121-93E8-46E7D5866D3C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Common.Formatters</RootNamespace>
-    <AssemblyName>Common.Formatters</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <RootNamespace>DbQueryMultipleServers</RootNamespace>
+    <AssemblyName>DbQueryMultipleServers</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -33,15 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\11.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,23 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ByteFormatter.cs" />
-    <Compile Include="Converters\Base36Convertors.cs" />
-    <Compile Include="Converters\Base64Converters.cs" />
-    <Compile Include="Converters\ConcreteTypeConverter.cs" />
-    <Compile Include="Converters\DataTableConverter.cs" />
-    <Compile Include="Converters\ParsingConverters.cs" />
-    <Compile Include="DatabaseStringFormatter.cs" />
-    <Compile Include="DateFormatter.cs" />
-    <Compile Include="FormatManager.cs" />
-    <Compile Include="JsonFormatter.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Soapformatter.cs" />
+    <Compile Include="QueryManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
